--- a/automotive/src/main/res/layout/activity_main.xml
+++ b/automotive/src/main/res/layout/activity_main.xml
@@ -10,11 +10,10 @@
 
     <EditText
         android:id="@+id/main_username"
-        android:layout_width="825dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="71dp"
-        android:layout_marginTop="109dp"
-        android:layout_marginBottom="242dp"
+        android:layout_marginTop="119dp"
+        android:layout_marginBottom="60dp"
         android:autofillHints=""
         android:background="@drawable/edit_text_background"
         android:drawableStart="@drawable/ic_user"
@@ -25,16 +24,17 @@
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:textSize="40sp"
-        app:layout_constraintBottom_toTopOf="@+id/main_login"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/main_password"
+        app:layout_constraintEnd_toEndOf="@+id/main_password"
+        app:layout_constraintStart_toStartOf="@+id/main_password"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/main_password"
-        android:layout_width="0dp"
+        android:layout_width="967dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="7dp"
-        android:layout_marginBottom="22dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginBottom="23dp"
         android:autofillHints=""
         android:background="@drawable/edit_text_background"
         android:drawableStart="@drawable/ic_password"
@@ -46,21 +46,19 @@
         android:paddingEnd="16dp"
         android:textSize="40sp"
         app:layout_constraintBottom_toTopOf="@+id/main_remember_me_checkbox"
-        app:layout_constraintEnd_toEndOf="@+id/main_username"
-        app:layout_constraintStart_toStartOf="@+id/main_remember_me_checkbox"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_username" />
 
     <CheckBox
         android:id="@+id/main_remember_me_checkbox"
         android:layout_width="258dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="29dp"
+        android:layout_marginBottom="23dp"
         android:checked="true"
         android:text="@string/remember_me"
         android:textColor="@color/black"
         android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/main_register"
+        app:layout_constraintBottom_toTopOf="@+id/main_login"
         app:layout_constraintStart_toStartOf="@+id/main_register"
         app:layout_constraintTop_toBottomOf="@+id/main_password" />
 
@@ -68,14 +66,14 @@
         android:id="@+id/main_register"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="55dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="267dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="32dp"
         android:backgroundTint="@drawable/button_background"
         android:text="@string/register_here"
         android:textColor="@color/white"
         android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/main_login"
         app:layout_constraintEnd_toStartOf="@+id/main_login"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_remember_me_checkbox" />
@@ -84,8 +82,8 @@
         android:id="@+id/main_login"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="144dp"
-        android:layout_marginBottom="267dp"
+        android:layout_marginEnd="329dp"
+        android:layout_marginBottom="65dp"
         android:backgroundTint="@drawable/button_background"
         android:text="@string/login"
         android:textColor="@color/white"
@@ -93,6 +91,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/main_register"
-        app:layout_constraintTop_toBottomOf="@+id/main_username" />
+        app:layout_constraintTop_toBottomOf="@+id/main_remember_me_checkbox" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
